# oware-game

./: .clang-format  CMakeLists.txt  LICENSE  README.MD
.github/workflows/: cmake.yml  codeql.yml
src/: Game.cpp  Game.hpp  Hole.cpp  Hole.hpp  Oware.cpp  Oware.hpp  main.cpp
src/gui/: CMakeLists.txt  GameView.cpp  GameView.hpp  HouseItem.cpp  HouseItem.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp  mainwindow.ui  resources.qrc
src/interface/: OwareAbstractClass.cpp  OwareAbstractClass.hpp  OwareInterface.hpp
src/model/: House.cpp  House.hpp  Player.cpp  Player.hpp
test/: CMakeLists.txt  OwareTest.cpp  test.cpp
